--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
+Pandas = "eadc2687-ae89-51f9-a5d9-86b5a6373a9c"
 
 [compat]
 ACE = "0.12.45"
